# pved

./: .dockerignore  .env-example  Cargo.toml  Dockerfile
.gitea/workflows/: action.yaml
.github/workflows/: github-actions.yml
src/: http_client_utils.rs  main.rs  models.rs
src/proxmox/: mod.rs
src/utils/: mod.rs
