[package]
name = "pved"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
env_logger = "0.11.3"

[dev-dependencies]
mockito = "1.4.0"