[package]
name = "pved"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
env_logger = "0.11.5"
log = "0.4.22"
time = "0.3.36" # This one is here so actix-web can work with rust 1.80

[dev-dependencies]
mockito = "1.5.0"